Setup/Applications/Fundamentals Harness training/Services/istio-tcp-lab/Manifests/Files/templates/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: harness-example
  name: harness-example-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: harness-example
        number: 31400
        protocol: TCP
        targetPort: 31400
